fix wave overflow problem and ball bug

--- a/src/Components/animation/wavestyle.css
+++ b/src/Components/animation/wavestyle.css
@@ -13,7 +13,9 @@
 }
 
 .water{
-    position: absolute;
+    position: fixed;
+    overflow: hidden;
+    
     left:0;
     width: 100%;
  
